--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
+    "nestjs-rmq": "^2.14.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nrwl/nest": "^19.8.4",
     "@nx/eslint": "20.6.4",
     "@nx/eslint-plugin": "20.6.4",
     "@nx/jest": "20.6.4",
@@ -23,18 +32,19 @@
     "@nx/nest": "20.6.4",
     "@nx/node": "20.6.4",
     "@nx/web": "20.6.4",
-    "@nx/webpack": "20.6.4",
+    "@nx/webpack": "^20.6.4",
     "@nx/workspace": "20.6.4",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "nx": "20.6.4",
+    "nx": "^20.6.4",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
