--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@contracts": ["libs/contracts/src/index.ts"],
+      "@interface": ["libs/interfaces/src/index.ts"],
+      "@decorators": ["libs/decorators/src/index.ts"],
+      "@apps/*": ["apps/*"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
