--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "mongoose": "^8.13.1",
     "nestjs-rmq": "^2.14.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -42,6 +46,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.11.97",
     "@types/node": "~18.16.9",
